syntax = "proto3";

package erutan;

option java_multiple_files = true;
option java_package = "com.erutan";
option java_outer_classname = "Erutan";
import "google/protobuf/timestamp.proto";

/*
    The Erutan service.
    Allows you to actually play the game.
*/
service Erutan {
    /*
    Blabla
    */
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc Stream(stream StreamRequest) returns (stream StreamResponse) {}
}



message Packet {
    oneof type {
        Position entity_position = 1;
    }

    message Position {
        string id = 1;
        float x = 2;
        float y = 3;
        float z = 4;
    }
}

message LoginRequest {
    string password = 1;
    string name     = 2;
}

message LoginResponse {
    string token = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {}


message StreamRequest {
    Packet message = 2;
}

message StreamResponse {
    google.protobuf.Timestamp timestamp = 1;

    oneof event {
        Login    client_login    = 2;
        Logout   client_logout   = 3;
        Packet   client_packet   = 4;
        Message  server_message  = 5;
        Shutdown server_shutdown = 6;
    }

    message Login {
        string name = 1;
    }

    message Logout {
        string name = 1;
    }

    message Message {
        string name    = 1;
        string message = 2;
    }

    message Shutdown {}
}
